--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "radix-vue": "^1.5.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vuex": "^4.1.0"
   }
 }
